// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ReviewCommentsSidepanel Component > should match snapshot with empty threads 1`] = `
<DocumentFragment>
  <div
    class="h-full font-primary z-20 bg-white border-l-[0.5px] overflow-hidden transition-all duration-300 undefined"
  >
    <div
      class="w-full pt-4 px-4 flex items-center justify-between"
    >
      <div
        class="text-typography-900 font-medium text-lg"
      >
        Comments
      </div>
    </div>
    <div
      class="w-full px-4"
    >
      <div
        data-testid="tabs"
      >
        <button
          data-active="true"
          data-testid="tab-inline"
        >
          Inline
        </button>
        <button
          data-active="false"
          data-testid="tab-general"
        >
          General
        </button>
      </div>
    </div>
    <div
      class="w-full h-full px-4"
    >
      <div
        data-testid="threads-to-show"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`ReviewCommentsSidepanel Component > should match snapshot with loading state 1`] = `
<DocumentFragment>
  <div
    class="h-full font-primary z-20 bg-white border-l-[0.5px] overflow-hidden transition-all duration-300 undefined"
  >
    <div
      class="w-full pt-4 px-4 flex items-center justify-between"
    >
      <div
        class="text-typography-900 font-medium text-lg"
      >
        Comments
      </div>
    </div>
    <div
      class="w-full px-4"
    >
      <div
        data-testid="tabs"
      >
        <button
          data-active="true"
          data-testid="tab-inline"
        >
          Inline
        </button>
        <button
          data-active="false"
          data-testid="tab-general"
        >
          General
        </button>
      </div>
    </div>
    <div
      class="w-full h-full px-4"
    >
      <div
        class="w-full h-full overflow-hidden flex flex-col gap-4 items-center"
      >
        <div
          class="w-full h-[140px] border-[0.5px] rounded-lg px-4 py-2 flex flex-col gap-2"
        >
          <div
            class="!w-full h-9"
            data-testid="skeleton"
          />
          <div
            class="w-full border-b-[0.5px] "
          />
          <div
            class="flex gap-2 h-[calc(100%-40px)]"
          >
            <div
              class="!w-8 h-8 rounded-full"
              data-testid="skeleton"
            />
            <div
              class="w-[calc(100%-32px)] flex flex-col gap-2"
            >
              <div
                class="!w-full h-[15px] "
                data-testid="skeleton"
              />
              <div
                class="!w-full h-[10px] "
                data-testid="skeleton"
              />
              <div
                class="!w-full h-[10px] "
                data-testid="skeleton"
              />
              <div
                class="!w-full h-[10px] "
                data-testid="skeleton"
              />
            </div>
          </div>
        </div>
        <div
          class="w-full h-[140px] border-[0.5px] rounded-lg px-4 py-2 flex flex-col gap-2"
        >
          <div
            class="!w-full h-9"
            data-testid="skeleton"
          />
          <div
            class="w-full border-b-[0.5px] "
          />
          <div
            class="flex gap-2 h-[calc(100%-40px)]"
          >
            <div
              class="!w-8 h-8 rounded-full"
              data-testid="skeleton"
            />
            <div
              class="w-[calc(100%-32px)] flex flex-col gap-2"
            >
              <div
                class="!w-full h-[15px] "
                data-testid="skeleton"
              />
              <div
                class="!w-full h-[10px] "
                data-testid="skeleton"
              />
              <div
                class="!w-full h-[10px] "
                data-testid="skeleton"
              />
              <div
                class="!w-full h-[10px] "
                data-testid="skeleton"
              />
            </div>
          </div>
        </div>
        <div
          class="w-full h-[140px] border-[0.5px] rounded-lg px-4 py-2 flex flex-col gap-2"
        >
          <div
            class="!w-full h-9"
            data-testid="skeleton"
          />
          <div
            class="w-full border-b-[0.5px] "
          />
          <div
            class="flex gap-2 h-[calc(100%-40px)]"
          >
            <div
              class="!w-8 h-8 rounded-full"
              data-testid="skeleton"
            />
            <div
              class="w-[calc(100%-32px)] flex flex-col gap-2"
            >
              <div
                class="!w-full h-[15px] "
                data-testid="skeleton"
              />
              <div
                class="!w-full h-[10px] "
                data-testid="skeleton"
              />
              <div
                class="!w-full h-[10px] "
                data-testid="skeleton"
              />
              <div
                class="!w-full h-[10px] "
                data-testid="skeleton"
              />
            </div>
          </div>
        </div>
        <div
          class="w-full h-[140px] border-[0.5px] rounded-lg px-4 py-2 flex flex-col gap-2"
        >
          <div
            class="!w-full h-9"
            data-testid="skeleton"
          />
          <div
            class="w-full border-b-[0.5px] "
          />
          <div
            class="flex gap-2 h-[calc(100%-40px)]"
          >
            <div
              class="!w-8 h-8 rounded-full"
              data-testid="skeleton"
            />
            <div
              class="w-[calc(100%-32px)] flex flex-col gap-2"
            >
              <div
                class="!w-full h-[15px] "
                data-testid="skeleton"
              />
              <div
                class="!w-full h-[10px] "
                data-testid="skeleton"
              />
              <div
                class="!w-full h-[10px] "
                data-testid="skeleton"
              />
              <div
                class="!w-full h-[10px] "
                data-testid="skeleton"
              />
            </div>
          </div>
        </div>
        <div
          class="w-full h-[140px] border-[0.5px] rounded-lg px-4 py-2 flex flex-col gap-2"
        >
          <div
            class="!w-full h-9"
            data-testid="skeleton"
          />
          <div
            class="w-full border-b-[0.5px] "
          />
          <div
            class="flex gap-2 h-[calc(100%-40px)]"
          >
            <div
              class="!w-8 h-8 rounded-full"
              data-testid="skeleton"
            />
            <div
              class="w-[calc(100%-32px)] flex flex-col gap-2"
            >
              <div
                class="!w-full h-[15px] "
                data-testid="skeleton"
              />
              <div
                class="!w-full h-[10px] "
                data-testid="skeleton"
              />
              <div
                class="!w-full h-[10px] "
                data-testid="skeleton"
              />
              <div
                class="!w-full h-[10px] "
                data-testid="skeleton"
              />
            </div>
          </div>
        </div>
        <div
          class="w-full h-[140px] border-[0.5px] rounded-lg px-4 py-2 flex flex-col gap-2"
        >
          <div
            class="!w-full h-9"
            data-testid="skeleton"
          />
          <div
            class="w-full border-b-[0.5px] "
          />
          <div
            class="flex gap-2 h-[calc(100%-40px)]"
          >
            <div
              class="!w-8 h-8 rounded-full"
              data-testid="skeleton"
            />
            <div
              class="w-[calc(100%-32px)] flex flex-col gap-2"
            >
              <div
                class="!w-full h-[15px] "
                data-testid="skeleton"
              />
              <div
                class="!w-full h-[10px] "
                data-testid="skeleton"
              />
              <div
                class="!w-full h-[10px] "
                data-testid="skeleton"
              />
              <div
                class="!w-full h-[10px] "
                data-testid="skeleton"
              />
            </div>
          </div>
        </div>
        <div
          class="w-full h-[140px] border-[0.5px] rounded-lg px-4 py-2 flex flex-col gap-2"
        >
          <div
            class="!w-full h-9"
            data-testid="skeleton"
          />
          <div
            class="w-full border-b-[0.5px] "
          />
          <div
            class="flex gap-2 h-[calc(100%-40px)]"
          >
            <div
              class="!w-8 h-8 rounded-full"
              data-testid="skeleton"
            />
            <div
              class="w-[calc(100%-32px)] flex flex-col gap-2"
            >
              <div
                class="!w-full h-[15px] "
                data-testid="skeleton"
              />
              <div
                class="!w-full h-[10px] "
                data-testid="skeleton"
              />
              <div
                class="!w-full h-[10px] "
                data-testid="skeleton"
              />
              <div
                class="!w-full h-[10px] "
                data-testid="skeleton"
              />
            </div>
          </div>
        </div>
        <div
          class="w-full h-[140px] border-[0.5px] rounded-lg px-4 py-2 flex flex-col gap-2"
        >
          <div
            class="!w-full h-9"
            data-testid="skeleton"
          />
          <div
            class="w-full border-b-[0.5px] "
          />
          <div
            class="flex gap-2 h-[calc(100%-40px)]"
          >
            <div
              class="!w-8 h-8 rounded-full"
              data-testid="skeleton"
            />
            <div
              class="w-[calc(100%-32px)] flex flex-col gap-2"
            >
              <div
                class="!w-full h-[15px] "
                data-testid="skeleton"
              />
              <div
                class="!w-full h-[10px] "
                data-testid="skeleton"
              />
              <div
                class="!w-full h-[10px] "
                data-testid="skeleton"
              />
              <div
                class="!w-full h-[10px] "
                data-testid="skeleton"
              />
            </div>
          </div>
        </div>
        <div
          class="w-full h-[140px] border-[0.5px] rounded-lg px-4 py-2 flex flex-col gap-2"
        >
          <div
            class="!w-full h-9"
            data-testid="skeleton"
          />
          <div
            class="w-full border-b-[0.5px] "
          />
          <div
            class="flex gap-2 h-[calc(100%-40px)]"
          >
            <div
              class="!w-8 h-8 rounded-full"
              data-testid="skeleton"
            />
            <div
              class="w-[calc(100%-32px)] flex flex-col gap-2"
            >
              <div
                class="!w-full h-[15px] "
                data-testid="skeleton"
              />
              <div
                class="!w-full h-[10px] "
                data-testid="skeleton"
              />
              <div
                class="!w-full h-[10px] "
                data-testid="skeleton"
              />
              <div
                class="!w-full h-[10px] "
                data-testid="skeleton"
              />
            </div>
          </div>
        </div>
        <div
          class="w-full h-[140px] border-[0.5px] rounded-lg px-4 py-2 flex flex-col gap-2"
        >
          <div
            class="!w-full h-9"
            data-testid="skeleton"
          />
          <div
            class="w-full border-b-[0.5px] "
          />
          <div
            class="flex gap-2 h-[calc(100%-40px)]"
          >
            <div
              class="!w-8 h-8 rounded-full"
              data-testid="skeleton"
            />
            <div
              class="w-[calc(100%-32px)] flex flex-col gap-2"
            >
              <div
                class="!w-full h-[15px] "
                data-testid="skeleton"
              />
              <div
                class="!w-full h-[10px] "
                data-testid="skeleton"
              />
              <div
                class="!w-full h-[10px] "
                data-testid="skeleton"
              />
              <div
                class="!w-full h-[10px] "
                data-testid="skeleton"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ReviewCommentsSidepanel Component > should match snapshot with threads 1`] = `
<DocumentFragment>
  <div
    class="h-full font-primary z-20 bg-white border-l-[0.5px] overflow-hidden transition-all duration-300 undefined"
  >
    <div
      class="w-full pt-4 px-4 flex items-center justify-between"
    >
      <div
        class="text-typography-900 font-medium text-lg"
      >
        Comments
      </div>
    </div>
    <div
      class="w-full px-4"
    >
      <div
        data-testid="tabs"
      >
        <button
          data-active="true"
          data-testid="tab-inline"
        >
          Inline
        </button>
        <button
          data-active="false"
          data-testid="tab-general"
        >
          General
        </button>
      </div>
    </div>
    <div
      class="w-full h-full px-4"
    >
      <div
        data-testid="threads-to-show"
      >
        <div
          class="cursor-pointer"
          style="opacity: 1; transition-delay: 0ms;"
        >
          <div
            data-testid="thread-card-thread-1"
          >
            <span
              data-testid="thread-text"
            >
              Selected text 1
            </span>
            <span
              data-testid="comment-count"
            >
              1
            </span>
          </div>
        </div>
        <div
          class="cursor-pointer"
          style="opacity: 1; transition-delay: 30ms;"
        >
          <div
            data-testid="thread-card-thread-2"
          >
            <span
              data-testid="thread-text"
            >
              Selected text 2
            </span>
            <span
              data-testid="comment-count"
            >
              2
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
